# ml-projects

./: .gitignore
news-agent/: README.md  pyproject.toml
news-agent/news_agent/: __init__.py  __main__.py
parkingspot-detector/: README.md  main.py  prepData.py  requirements.txt  trainModel.py  util.py
sentiment-analysis/: .gitignore  README.md  sentiment-analysis.ipynb
